--- a/pokedex.html
+++ b/pokedex.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./pokedex.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/jpg" href="/img/pokebola.png" />
     <title>PokéDex</title>
+    <script src="./pokedex.js" defer></script>
   </head>
   <body>
-    <div>
-      <div id="imageHeader">
-        <img
-          src="img/Pokemon-logo.png"
-          alt="Imagen Cabecera"
-          id="imgCabecera"
-        />
-      </div>
-      <div id="searchContainer">
-        <input id="search" type="text" placeholder="Introduce tu busqueda..." />
-        <button id="btnSearch">Buscar</button>
-      </div>
-      <div id="catalogContainer"></div>
+    <div class="imageHeader">
+      <img src="img/Pokemon-logo.png" alt="Imagen Cabecera" id="imgCabecera" />
     </div>
+    <div class="searchContainer">
+      <input id="search" type="text" placeholder="Introduce tu busqueda..." />
+      <button id="btnSearch">Buscar</button>
+    </div>
+    <div id="catalogContainer"></div>
   </body>
 </html>
